--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "3d_portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://peterzabila.github.io/3d_portfolio/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
